QR Visibility Fix + Style Renaming

--- a/CDAA/assets/css/styles.css
+++ b/CDAA/assets/css/styles.css
@@ -316,71 +316,71 @@ body {
 		content: "more...";
 		padding-bottom: 60px;
 	}
-	.detailcontent {
+	.detailRow {
 		padding: 15px 30% 0 30%;
 	}
-	.detailimage {
+	.detailImage {
 		width: 100%;
 		height: auto;
 		border: 1px solid var(--dark);
 		border-radius: 5px;
 	}
-	.detailinfo {
+	.detailInfo {
 		line-height: 140%;
 		font-size: 16px;
 		margin-bottom: 15px;
 	}
-	.detailtitle {
+	.detailTitle {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detaildate {
+	.detailDate {
 		margin-bottom: 5px;
 	}
-	.detailinfo a {
+	.detailInfo a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.detailchapter {
+	.detailSection {
 		line-height: 130%;
 		padding-bottom: 5px;
 		border-bottom: 1px solid var(--grey);
 		margin-bottom: 10px;
 	}
-	.detailchapter h2 {
+	.detailSection h2 {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detailchapter button {
+	.detailSection button {
 		display: none;
 	}
-	.detailchapter p {
+	.detailSection p {
 		transition: max-height 0.2s ease-out;
 		font-size: 16px;
 	}
-	.detailchapter table {
+	.detailSection table {
 		padding: 5px;
 	}
-	.detailchapter table th,
+	.detailSection table th,
 	td {
 		padding: 5px;
 		/* border-bottom: 1px solid var(--grey); */
 	}
-	.detailchapter table th {
+	.detailSection table th {
 		/* font-weight: bold; */
 	}
-	.detailchapter table td {
+	.detailSection table td {
 		color: var(--lowcontrast);
 	}
-	.detailchapter a {
+	.detailSection a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.imageview {
+	.imageView {
 		padding: 0px 20% 0px 20%;
 		height: 90%;
 	}
-	.goBackBar {
+	.goBack {
 		z-index: 5;
 		width: 100%;
 		height: 60px;
@@ -390,7 +390,7 @@ body {
 		grid-template-rows: 1fr auto 1fr;
 		vertical-align: center;
 	}
-	.goBackBar Button {
+	.goBack Button {
 		grid-column: 1/2;
 		grid-row: 2/3;
 		text-align: left;
@@ -401,12 +401,12 @@ body {
 		font-size: 18px;
 		border: none;
 	}
-	.imageview img {
+	.imageView img {
 		padding: 15px 0px;
 		width: 100%;
 		height: auto;
 	}
-	.imageview .imagepreview {
+	.imageView .imagePreview {
 		z-index: 5;
 		padding: 15px 0px;
 		position: fixed;
@@ -416,17 +416,16 @@ body {
 		width: 100%;
 		height: 60px;
 	}
-	.imageview .imagepreview ul {
+	.imageView .imagePreview ul {
 		list-style: none;
 		display: flex;
 	}
-	.imageview .imagepreview ul li {}
-	.imageview .imagepreview ul li img {
+	.imageView .imagePreview ul li {}
+	.imageView .imagePreview ul li img {
 		width: 60px;
 		height: 60px;
 	}
 }
-
 
 /* Media Query for Tablet specific */
 
@@ -601,71 +600,71 @@ body {
 		content: "more...";
 		padding-bottom: 60px;
 	}
-	.detailcontent {
+	.detailRow {
 		padding: 15px 10% 0 10%;
 	}
-	.detailimage {
+	.detailImage {
 		width: 100%;
 		height: auto;
 		border: 1px solid var(--dark);
 		border-radius: 5px;
 	}
-	.detailinfo {
+	.detailInfo {
 		line-height: 140%;
 		font-size: 16px;
 		margin-bottom: 15px;
 	}
-	.detailtitle {
+	.detailTitle {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detaildate {
+	.detailDate {
 		margin-bottom: 5px;
 	}
-	.detailinfo a {
+	.detailInfo a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.detailchapter {
+	.detailSection {
 		line-height: 130%;
 		padding-bottom: 5px;
 		border-bottom: 1px solid var(--grey);
 		margin-bottom: 10px;
 	}
-	.detailchapter h2 {
+	.detailSection h2 {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detailchapter button {
+	.detailSection button {
 		display: none;
 	}
-	.detailchapter p {
+	.detailSection p {
 		transition: max-height 0.2s ease-out;
 		font-size: 16px;
 	}
-	.detailchapter table {
+	.detailSection table {
 		padding: 5px;
 	}
-	.detailchapter table th,
+	.detailSection table th,
 	td {
 		padding: 5px;
 		/* border-bottom: 1px solid var(--grey); */
 	}
-	.detailchapter table th {
+	.detailSection table th {
 		/* font-weight: bold; */
 	}
-	.detailchapter table td {
+	.detailSection table td {
 		color: var(--lowcontrast);
 	}
-	.detailchapter a {
+	.detailSection a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.imageview {
+	.imageView {
 		padding: 0px 10% 0px 10%;
 		height: 90%;
 	}
-	.goBackBar {
+	.goBack {
 		z-index: 5;
 		width: 100%;
 		height: 60px;
@@ -675,7 +674,7 @@ body {
 		grid-template-rows: 1fr auto 1fr;
 		vertical-align: center;
 	}
-	.goBackBar Button {
+	.goBack Button {
 		grid-column: 1/2;
 		grid-row: 2/3;
 		text-align: left;
@@ -686,12 +685,12 @@ body {
 		font-size: 18px;
 		border: none;
 	}
-	.imageview img {
+	.imageView img {
 		padding: 15px 0px;
 		width: 100%;
 		height: auto;
 	}
-	.imageview .imagepreview {
+	.imageView .imagePreview {
 		z-index: 5;
 		padding: 15px 0px;
 		position: fixed;
@@ -701,12 +700,12 @@ body {
 		width: 100%;
 		height: 60px;
 	}
-	.imageview .imagepreview ul {
+	.imageView .imagePreview ul {
 		list-style: none;
 		display: flex;
 	}
-	.imageview .imagepreview ul li {}
-	.imageview .imagepreview ul li img {
+	.imageView .imagePreview ul li {}
+	.imageView .imagePreview ul li img {
 		width: 60px;
 		height: 60px;
 	}
@@ -891,71 +890,71 @@ body {
 		content: "more...";
 		padding-bottom: 60px;
 	}
-	.detailcontent {
+	.detailRow {
 		padding: 10px 10px 0px 10px;
 	}
-	.detailimage {
+	.detailImage {
 		width: 100%;
 		height: auto;
 		border: 1px solid var(--dark);
 		border-radius: 5px;
 	}
-	.detailinfo {
+	.detailInfo {
 		line-height: 140%;
 		font-size: 16px;
 		margin-bottom: 15px;
 	}
-	.detailtitle {
+	.detailTitle {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detaildate {
+	.detailDate {
 		margin-bottom: 5px;
 	}
-	.detailinfo a {
+	.detailInfo a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.detailchapter {
+	.detailSection {
 		line-height: 130%;
 		padding-bottom: 5px;
 		border-bottom: 1px solid var(--grey);
 		margin-bottom: 10px;
 	}
-	.detailchapter h2 {
+	.detailSection h2 {
 		font-size: 24px;
 		margin-bottom: 5px;
 	}
-	.detailchapter button {
+	.detailSection button {
 		display: none;
 	}
-	.detailchapter p {
+	.detailSection p {
 		transition: max-height 0.2s ease-out;
 		font-size: 16px;
 	}
-	.detailchapter table {
+	.detailSection table {
 		padding: 5px;
 	}
-	.detailchapter table th,
+	.detailSection table th,
 	td {
 		padding: 5px;
 		/* border-bottom: 1px solid var(--grey); */
 	}
-	.detailchapter table th {
+	.detailSection table th {
 		/* font-weight: bold; */
 	}
-	.detailchapter table td {
+	.detailSection table td {
 		color: var(--lowcontrast);
 	}
-	.detailchapter a {
+	.detailSection a {
 		color: var(--highlight);
 		text-decoration: none;
 	}
-	.imageview {
+	.imageView {
 		padding: 0px 10px 0px 10px;
 		height: 90%;
 	}
-	.goBackBar {
+	.goBack {
 		z-index: 5;
 		width: 100%;
 		height: 60px;
@@ -965,7 +964,7 @@ body {
 		grid-template-rows: 1fr auto 1fr;
 		vertical-align: center;
 	}
-	.goBackBar Button {
+	.goBack Button {
 		grid-column: 1/2;
 		grid-row: 2/3;
 		text-align: left;
@@ -976,12 +975,12 @@ body {
 		font-size: 18px;
 		border: none;
 	}
-	.imageview img {
+	.imageView img {
 		padding: 15px 0px;
 		width: 100%;
 		height: auto;
 	}
-	.imageview .imagepreview {
+	.imageView .imagePreview {
 		z-index: 5;
 		padding: 15px 0px;
 		position: fixed;
@@ -991,12 +990,12 @@ body {
 		width: 100%;
 		height: 60px;
 	}
-	.imageview .imagepreview ul {
+	.imageView .imagePreview ul {
 		list-style: none;
 		display: flex;
 	}
-	.imageview .imagepreview ul li {}
-	.imageview .imagepreview ul li img {
+	.imageView .imagePreview ul li {}
+	.imageView .imagePreview ul li img {
 		width: 60px;
 		height: 60px;
 	}
@@ -1013,16 +1012,15 @@ body {
 .icon.active {
 	filter: invert(36%) sepia(80%) saturate(5758%) hue-rotate(230deg) brightness(70%) contrast(90%);
 }
+
 #scan {
 	overflow: hidden;
 	padding: 0;
 }
 
 #qr-preview {
-	position: absolute;
 	left: -9999px;
 	right: -9999px;
 	width: 100%;
 	height: 100%;
-
 }
